2009-07-13  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompile.c (TclInitCompileEnv, EnterCmdWordIndex,
	TclCleanupByteCode, TclCompileScript):
	* generic/tclExecute.c (TclCompileObj, TclExecuteByteCode): 
	* tclCompile.h (ExtCmdLoc): 
	* tclInt.h (ExtIndex, CFWordBC, CmdFrame):
	* tclBasic.c (DeleteInterpProc, TclArgumentBCEnter,
	TclArgumentBCRelease, TclArgumentGet, SAVE_CONTEXT,
	RESTORE_CONTEXT, NRCoroutineExitCallback, TclNRCoroutineObjCmd):
	* generic/tclCmdAH.c (TclNRForObjCmd, TclNRForIterCallback,
	ForNextCallback):
	* generic/tclCmdMZ.c (TclNRWhileObjCmd):

	Extended the bytecode compiler initialization to recognize the
	compilation of whole files (NRE enabled 'source' command) and
	switch to the counting of absolute lines in that case.

	Further extended the bytecode compiler to track the start line in
	the generated information, and modified the bytecode execution to
	recompile an object if the location as per the calling context
	doesn't match the location saved in the bytecode. This part could
	be optimized more by using more memory to keep all possibilities
	which occur around, or by just adjusting the location information
	instead of a total recompile.

	Reworked the handling of literal command arguments in bytecode to
	be saved (compiler) and used (execution) per command (See the
	TCL_INVOKE_STK* instructions), and not per the whole bytecode.
	This, and the previous change remove the problems with location
	data caused by literal sharing (across whole files, but also proc
	bodies). Simplified the associated datastructures (ExtIndex is
	gone, as is the function EnterCmdWordIndex).

	The last change causes the hashtable 'lineLABCPtr' to be state
	which has to be kept per coroutine, like the CmdFrame stack.
	Reworked the coroutine support code to create, delete and switch
	the information as needed. Further reworked the tailcall command
	as well, it has to pop its own arguments when run in a bytecode