@@ -1,3 +1,11 @@
+2009-07-14  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tclInt.h (TclNRSwitchObjCmd):
+	* generic/tclBasic.c (builtInCmds):
+	* generic/tclCmdMZ.c (Tcl_SwitchObjCmd):
+	* tests/switch.test (switch-15.1):
+	Make non-bytecoded [switch] command aware of NRE. [Bug 2821401]
+	
 2009-07-13  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/tclCompile.c (TclInitCompileEnv, EnterCmdWordIndex,
